--- a/.woodpecker/build.yml
+++ b/.woodpecker/build.yml
@@ -1,19 +1,17 @@
 steps:
   - name: build-binaries
     image: golang:1.22.0
-    matrix:
-      GOOS: [linux, darwin]
-      GOARCH: [amd64, arm64]
     commands:
       - mkdir -p ./artifacts
-      - export GOOS=${GOOS}
-      - export GOARCH=${GOARCH}
       - version="woodpecker"
       - appName="PortHog"
       - builtAt="$(date +'%F %T %z')"
       - gitCommit=$(git log --pretty=format:"%h" -1)
       - ldflags="-w -s -X 'main.AppName=$appName' -X 'main.BuiltAt=$builtAt' -X 'main.GitCommit=$gitCommit' -X 'main.Version=$version'"
-      - go build -ldflags="$ldflags" -o "./artifacts/porthog_${GOOS}_${GOARCH}" .
+      - GOOS=linux GOARCH=amd64 go build -ldflags="$ldflags" -o "./artifacts/porthog_linux_amd64" .
+      - GOOS=linux GOARCH=arm64 go build -ldflags="$ldflags" -o "./artifacts/porthog_linux_arm64" .
+      - GOOS=darwin GOARCH=amd64 go build -ldflags="$ldflags" -o "./artifacts/porthog_darwin_amd64" .
+      - GOOS=darwin GOARCH=arm64 go build -ldflags="$ldflags" -o "./artifacts/porthog_darwin_arm64" .
     when:
       event: [ push, tag, manual ]
 
